src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    html {
        @apply text-neutral-700;
    }

    .text-stroke-2 {
        -webkit-text-stroke: 2px currentColor;
    }
    .text-stroke-4 {
        -webkit-text-stroke: 4px currentColor;
    }
}

@layer utilities {
    .no-scrollbar::-webkit-scrollbar {
        display: none;
    }

    .no-scrollbar {
        -ms-overflow-style: none;
        scrollbar-width: none;
    }
}

